Fix various bugs in running Py4J.